# yeozs-yeozs-Excel_Heroku_Telegram_V2.1

./: README.md
Initial_Heroku_Documents/: 126sqnexcel.csv  flyingprogramme.csv  main.py  requirements.txt  sarprogramme.csv  sqnexcel.csv
Receiver-QR-Code-to-csv-to-Heroku-to-Telegram/: main.py  pyproject.toml
Sender-Side-Excel-to-CSV-to-QR-Code/: main.py  sqnexcel.xlsx
